--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
   /* colors */
   --primary-color: #F3F4EC;
   --secondary-color: #6C6E71;
+  --dot-color: #DAD9D8;
   --forest-green: #292D33;
   --charcoal: #202020;
   --sunset: #D4491B;
@@ -104,21 +105,21 @@ button a {
 }
 
 .slick-dots li {
-  margin: 0 5px;
-}
-
-.slick-dots li button {
-  width: 10px;
-  height: 10px;
-  background-color: #1e0dd4;
-  border-radius: 50%;
-  border: none;
+  margin: 0 2px;
+  width: 15px;
+  height: 15px;
+  list-style: none;
+  float: left;
+  background-color: var(--dot-color);
+  border-radius: 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: 0.3s ease width;
 }
 
 li.slick-active {
-  background-color: #c60a0a;
+  background-color: var(--sunset);
+  width: 60px;
+  cursor: auto;
 }
 
 /* Mobile CSS */
