--- a/css/index.css
+++ b/css/index.css
@@ -127,6 +127,7 @@ li.slick-active {
   .row-one {
     flex-direction: column;
     align-items: center;
+    padding: 10px;
   }
   #second-row {
     flex-direction: column-reverse;
